--- a/package.json
+++ b/package.json
@@ -1,46 +1,37 @@
 {
-  "name": "node-express-typescript",
-  "version": "1.0.0",
-  "description": "Node.js setup with Express and TypeScript",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "rimraf dist && tsc",
-    "preserve": "npm run build",
-    "serve": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon -q dist/index.js\"",
-    "prestart": "npm run build",
-    "start": "cross-env NODE_ENV=production node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ultimatecourses/node-express-typescript.git"
-  },
-  "author": "ultimatecourses",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ultimatecourses/node-express-typescript/issues"
-  },
-  "homepage": "https://github.com/ultimatecourses/node-express-typescript#readme",
-  "dependencies": {
-    "@types/body-parser": "^1.19.0",
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.22",
-    "body-parser": "^1.19.0",
-    "cross-env": "^7.0.3",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-jwt": "^6.0.0",
-    "helmet": "^4.4.1",
-    "jsonwebtoken": "^8.5.1",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.1.3",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "@types/express-jwt": "^6.0.1",
-    "@types/jsonwebtoken": "^8.5.1",
-    "@types/uuid": "^8.3.0",
-    "concurrently": "^5.3.0",
-    "nodemon": "^2.0.7"
-  }
+	"name": "pd-swe-interview",
+	"version": "1.0.0",
+	"description": "Node.js setup with Express and TypeScript",
+	"main": "dist/index.js",
+	"scripts": {
+		"build": "rimraf dist && tsc",
+		"preserve": "npm run build",
+		"serve": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon -q dist/index.js\"",
+		"prestart": "npm run build",
+		"start": "cross-env NODE_ENV=production node dist/index.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"license": "MIT",
+	"dependencies": {
+		"@types/body-parser": "^1.19.5",
+		"@types/express": "^4.17.21",
+		"@types/node": "^14.18.63",
+		"body-parser": "^1.20.3",
+		"cross-env": "^7.0.3",
+		"dotenv": "^8.6.0",
+		"express": "^4.21.2",
+		"express-jwt": "^8.5.1",
+		"helmet": "^4.6.0",
+		"jsonwebtoken": "^9.0.2",
+		"rimraf": "^3.0.2",
+		"typescript": "^4.9.5",
+		"uuid": "^8.3.2"
+	},
+	"devDependencies": {
+		"@types/express-jwt": "^6.0.4",
+		"@types/jsonwebtoken": "^8.5.9",
+		"@types/uuid": "^8.3.4",
+		"concurrently": "^5.3.0",
+		"nodemon": "^3.1.9"
+	}
 }
